--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
         <link real="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1><b>Aqui vamos a hacer un blog post</b></h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1><b>Este es el titulo atractivo e interesante del post</b></h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </html>
