--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera 
+                HyperBlog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1><b>Este es el titulo atractivo e interesante del post</b></h1>
