--- a/blogpost.html
+++ b/blogpost.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Bienvenido a HyperBlog 2.0</title>
-        <link real="stylesheet" href="css/estilos.css" />
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png"/>
                 HyperBlog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
