--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Bienvenido a HyperBlog 2.0</title>
-        <link real="stylesheet" href="css/estilos.css" />
+        <link rel="stylesheet" href="css/estilos.css" type="text/css" />
     </head>
     <body>
         <div id="container">
@@ -16,6 +16,9 @@
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en YouTube. 
                    Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora  </p>
                 <p>Suscribete y dale like</p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi ❤
             </div>
         </div>
     </body>
