--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
             <div id="post">
                 <h1><b>Este es el t&iacute;tulo atractivo e interesante del post</b></h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/chimuelo.jpg"/></p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en YouTube. 
                    Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora  </p>
                 <p>Suscribete y dale like</p>
